# open-edc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pypi_publish.yml  testing.yml
.sqlx/: query-049260d3eb15eba0ed500f2a89c776b99bc31bf0bd4c5993b7667870964ab6e2.json  query-19cc8fde822fa8f5634e8c99e604cc52d8916dd76944d472bc2db705336011fd.json  query-1f503ce5574c709d7c598fa0267ba36db54ae641de588091e425019945acba4e.json  query-221bd6274f897b4a06d25b9edb56a442a60a9427771b419ba666d8a81124f32b.json  query-28e07f3398cef3e896fd0b98280339f61ebdd8043567be180dba6563d46d5ded.json  query-2b4e44f17f4b1f198bcac4a278890ea08c6904bd38f4cde4fb04dbefc6705873.json  query-358032ad63b40b8b02447964396b37ac71637073d4d21de19b1fffe8c6b2780a.json  query-3fc4bb0d2b40933052358c57fbde51e00584d7a9bf63a3689d4a54987b31b70b.json  query-6005786a7cccc07f70112adffebdda3db51961f60208ced299c01ae19d36df29.json  query-66c8310cd6d6a8779de5d9bc462c2d60535c32e58dbcc24b790cdc1fbdb39bf5.json  query-67a54113a23ae76cf0d755622cfb429ec559a49ae7583eb59ec9f47437af6238.json  query-6f4b25721ce6838140c02dd60f06cb3a95efc660ff12bfdaf7d789a97f01f9e5.json  query-7e2b09cfde5edf96ec685d86694c914cebe6c5c9efe5b09aa9cb374431186f25.json  query-90280cdbf8a29fe41d6ddb40b497edb19d4d0bf3dacbfbcc2cf2adc8c5914978.json  query-b3c5b1f3bf5fba9d656431a742f2f306632c26e2da1342621b5fd3fb654a5dec.json  query-c1a9510e4e7bea1dc3ba9d820547576340ba5522b416debe046e08cc60b9c37d.json  query-c556d9e86496ca029b7f31fbf1ab8aae88a115cd14cc8ca2d6bbacbc09800fdb.json  query-d21592e297fddc4a2713db704ec3607b6ea78e61b9d57946c3dcfc05d1a5dee7.json  query-e6243553b1addf357c8644eb4abf4a4d3c30eea888f42277b255f2a7c71a16cf.json  query-fa062420ce13ab51f87f50177bd047abcafc7aed772ba749d38f1a23572403e5.json
migrations/: 20240411150555_init.down.sql  20240411150555_init.up.sql
open-edc/: Cargo.toml
open-edc/src/: cli.rs  config.rs  db.rs  main.rs  utils.rs
open-edc/src/api/v1/routes/: health.rs  mod.rs  organization.rs
open-edc/src/models/: messages.rs  mod.rs  organization.rs  user.rs
open-edc/src/services/: organization.rs
open_edc/: __init__.py  __main__.py  db.py  exceptions.py  main.py
open_edc/api/: deps.py
open_edc/api/v1/: api.py
open_edc/api/v1/routes/: health.py  login.py  user.py
open_edc/core/: config.py  security.py  utils.py
open_edc/models/: object_id.py  token.py  user.py
open_edc/services/: user_service.py
sql/: init.sql
src/: cli.rs  config.rs  db.rs  main.rs  openapi.rs  state.rs  utils.rs
src/api/v1/routes/: mod.rs  organization.rs  study.rs  user.rs
src/models/: messages.rs  mod.rs  organization.rs  study.rs  user.rs
src/routes/: health.rs  organization.rs  study.rs  user.rs
src/services/: cache_services.rs  mod.rs  organization_services.rs  study_services.rs  user_services.rs
tests/: conftest.py  test_health_routes.py  test_login_routes.py  test_main.py  test_user_routes.py  test_utils.py  test_version.py
