[package]
name = "open-edc"
version = "0.1.0"
authors = [
  "Paul Sanders <paul@pbsdatasolutions.com>",
]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.82"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.7.5"
bb8 = "0.8.3"
bb8-redis = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.1"
mime = "0.3.17"
tower = { version = "0.4.13", features = ["util"] }
uuid = { version = "1.8.0", features = ["v4"] }
