[package]
name = "open-edc"
version = "0.1.0"
authors = [
  "Paul Sanders <paul@pbsdatasolutions.com>",
]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.7.5"
bb8 = "0.8.5"
bb8-redis = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }
dotenvy = "0.15.7"
redis = { version = "0.26.0", features = ["tokio-comp"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3.17"
tower = { version = "0.4.13", features = ["util"] }
uuid = { version = "1.10.0", features = ["v4"] }
