[tool.poetry]
name = "open-edc"
version = "0.1.0"
description = "EDC System"
authors = ["Paul Sanders <paul@pbsdatasolutions.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argon2-cffi = "23.1.0"
beanie = "1.24.0"
camel-converter = {version = "3.1.1", extras = ["pydantic"]}
fastapi = "0.108.0"
passlib = "1.7.4"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
pyjwt = "2.8.0"
python-multipart = "0.0.6"
uvloop = "0.19.0"
uvicorn = {version = "0.25.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
httpx = "0.26.0"
mypy = "1.8.0"
pre-commit = "3.6.0"
pytest = "7.4.4"
pytest-asyncio = "0.21.1"  # pinned to this version because newer version have an issue with the event loop closing early: https://github.com/pytest-dev/pytest-asyncio/issues/708
pytest-cov = "4.1.0"
ruff = "0.1.11"
tomli = {version = "2.0.1", python = "<3.11"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["passlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=open_edc --cov-report term-missing --no-cov-on-fail"
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore=[
  # Recommended ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
line-length = 100
target-version = "py38"
fix = true
