[package]
name = "open-edc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.7.4"
clap = { version = "4.4.11", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.11.22"
